@@ -6,12 +6,13 @@
 ** New functionality
    - CertRevocationBuilder::add_notation
    - CertRevocationBuilder::set_notation
+   - KeyFlags::clear_group_key
    - SubkeyRevocationBuilder::add_notation
    - SubkeyRevocationBuilder::set_notation
-   - UserIDRevocationBuilder::add_notation
-   - UserIDRevocationBuilder::set_notation
    - UserAttributeRevocationBuilder::add_notation
    - UserAttributeRevocationBuilder::set_notation
+   - UserIDRevocationBuilder::add_notation
+   - UserIDRevocationBuilder::set_notation
 * Changes in 1.5.0
 ** Notable changes
    - This crate is now licensed under the LGPL 2.0 or later.
